--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
+    "delay": "^5.0.0",
     "expo": "~39.0.2",
+    "expo-device": "~2.3.0",
     "expo-image-picker": "^9.2.1",
+    "expo-localization": "~9.0.0",
     "expo-notifications": "~0.7.2",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
@@ -44,9 +47,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.1",
-    "expo-localization": "~9.0.0",
-    "expo-device": "~2.3.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
