--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-reanimated": "~1.13.0",
+    "react-native-rsa": "0.0.3",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-swipe-list-view": "^3.2.5",
